add sample code snippet on how to use it with Rails asset pipeline

--- a/README.textile
+++ b/README.textile
@@ -30,6 +30,20 @@ offline = Rack::Offline.configure do
 end
 </pre>
 
+And when used with Rails asset pipeline:
+
+<pre lang="ruby">
+  if Rails.env.production?
+    offline = Rack::Offline.configure :cache_interval => 120 do      
+      cache ActionController::Base.helpers.asset_path("application.css")
+      cache ActionController::Base.helpers.asset_path("application.js")
+      # cache other assets
+      network "/"  
+    end
+    match "/application.manifest" => offline  
+  end
+</pre>
+
 You can pass an options Hash into #configure in Rack::Offline:
 
 |_. name |_. purpose |_. value in Rails::Offline |
